# test-action

./: Dockerfile  pyproject.toml
.github/workflows/: ci-docker.yml
dpgen2/: _version.py
testaction/: _version.py
